infra/monitoring/prometheus-auth-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: prometheus-auth
spec:
  basicAuth:
    secret: prometheus-basic-auth
