infra/monitoring/grafana-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
spec:
  routes:
    - match: Host(`grafana.ieeetamu.org`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-grafana
          port: 80
