infra/monitoring/prometheus-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
spec:
  routes:
    - match: Host(`prometheus.ieeetamu.org`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-prometheus
          port: 9090
      middlewares:
        - name: prometheus-auth
          namespace: monitoring
